--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@
     box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
+li {
+    text-align: left;
+    margin-left: 40px;
+    margin-right: 40px;
+}
 /*
  * Custom translucent site header
  */
@@ -58,6 +63,14 @@
     #profil img {
         width: 80%;
         height: 80%;
+    }
+    #title-logo {
+        font-size: 2.4em;
+    }
+}
+@media screen and (max-width: 1370px) {
+    #title-logo {
+        font-size: 2.4em;
     }
 }
 
