--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     border-radius: 10px;
 }
 li {
-    text-align: justify;
+    text-align: right;
     margin-left: 40px;
     margin-right: 40px;
 }
