--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ li {
 p {
     text-align: justify;
 }
-p.lead font-weight-normal {
-   text-align: center !important;
+h4 {
+   text-align: center;
 }
 /*
  * Custom translucent site header
