bugfix img-wrapper css

--- a/style.css
+++ b/style.css
@@ -53,8 +53,7 @@ ul {
     text-decoration: none;
 }
 .div-wrapper img {
-    position: absolute;
-    left: 0;
+    position: relative;
     bottom: 0;
 }
 
