--- a/style.css
+++ b/style.css
@@ -20,6 +20,76 @@
     box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
 }
+#logologo img {
+    width: 300px;
+    height: 300px;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+#logologo img:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
+#kommunikation img {
+    width: 500px;
+    height: 345px;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+#kommunikation img:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
+#sprachverstaendnis img {
+    width: 484px;
+    height: 336px;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+#sprachverstaendnis img:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
+#buchstaben img {
+    width: 500px;
+    height: 333px;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+#buchstaben img:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
+#mediuspraxis img {
+    width: 500px;
+    height: 333px;
+    border-radius: 10px;
+    margin-bottom: 2em;
+}
+#mediuspraxis img:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+}
 li {
     text-align: justify;
     margin-left: 20px;
@@ -28,8 +98,14 @@ li {
 p {
     text-align: justify;
 }
+h2{
+    font-size: 1.75em;
+}
+h3 {
+    font-size: 1.5em;
+}
 h4 {
-   text-align: center;
+    font-size: 2em;
 }
 ul {
     margin: 0;
