--- a/style.css
+++ b/style.css
@@ -141,6 +141,22 @@
 #telnr {
     color: aqua;
 }
+#schwerpunktlink1{
+    color: aqua;
+}
+#uebermichlink10{
+    color: aqua;
+}
+#schlaglink{
+    color: aqua;
+}
+#schlag2{
+    color: aqua;
+}
+#lebensg
+{
+    color: orangered;
+}
 
 #title-logo {
     text-align: center;
